hphp/hack/test/typecheck/akshape/nested_access_error.php.exp
File "nested_access_error.php", line 12, characters 15-25:
Invalid argument (Typing[4110])
File "nested_access_error.php", line 15, characters 22-27:
This is a string
File "nested_access_error.php", line 10, characters 17-17:
It is incompatible with an int
